<resources>
    <string name="app_name">Crafting</string>

    <string name="login_as_a_seller">Login as a Seller</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forget_password">Forget Password</string>
    <string name="login">Login</string>
    <string name="name_of_artisan">Name of Artisan</string>
    <string name="own_product_details">Own Product Details</string>
    <string name="recent_add_product_details">Recent add Product \nDetails</string>
    <string name="view_ratings">View Ratings</string>
    <string name="account_setting">Account Setting</string>
    <string name="Logout">Logout</string>
    <string name="next">Next</string>
    <string name="best_seller">Best Seller</string>
    <string name="new_collection">New Collection</string>
    <string name="top_rates">Top Rates</string>
    <string name="view_all">View All</string>
    <string name="view_previous_products">View Previous Products</string>
    <string name="add_new_products">Add New Products</string>
    <string name="title_activity_registarasaseller">registarasaseller</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="register_as_a_seller">Register as a Seller</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="login_as_customer">Login as Customer</string>
    <string name="registar">Registar</string>
    <string name="customer">Customer</string>
    <string name="seller">Seller</string>
    <string name="register_as_customer">Register As Customer</string>
    <string name="registarr">Registar</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="cart">Cart</string>
    <string name="search">Search</string>
    <string name="category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_cart">Cart</string>
    <string name="address">address</string>
    <string name="update">update</string>
    <string name="hi_welcome">Hi..! Welcome...</string>
    <string name="an_effective_grocery_managment_system">An effective grocery managment system is needed to ensure consumer affordability during a downform in the economy by streamlinning the supply chain cutting waste and lowering costs</string>
    <string name="addtocart">Addtocart</string>
    <string name="your_card_details">your card details</string>
    <string name="card_aspected">Card aspected</string>
    <string name="pay_in_your_card">Pay In Your Card</string>
    <string name="card_holder_name">card holder name</string>
    <string name="cvv">cvv</string>
    <string name="exp_year">exp year</string>
    <string name="card_number">card number</string>
    <string name="add">Add</string>
    <string name="order_now">order now</string>
    <string name="enter_quantity">enter quantity</string>
    <string name="quantity">quantity</string>
    <string name="your_profile">Your profile</string>

</resources>