<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowLight"
    tools:context=".registarasaseller">

    <LinearLayout
        android:id="@+id/registarasasellerl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginTop="30sp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registartext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_as_a_seller"
            android:textColor="@color/black"
            android:textSize="20sp" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registarasasellerl1">


        <EditText
            android:id="@+id/registarasasellerfname"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/first_name" />

        <EditText
            android:id="@+id/registarasasellerlname"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/last_name" />

        <EditText
            android:id="@+id/registarasasellerno"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/mobile_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/registarasaselleremail"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/email" />


        <EditText
            android:id="@+id/registarasasellerpassword"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/registarasasellerconpassword"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />


    </LinearLayout>


    <Button
        android:id="@+id/registarasseller"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20sp"
        android:backgroundTint="@color/black"
        android:text="@string/submit"

        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>