<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginascustomer">


    <LinearLayout
        android:id="@+id/loginascustl1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="45sp"
            android:textStyle="bold"
            android:text="@string/app_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/login_as_customer"/>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/loginascustl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:gravity="center"
        android:paddingTop="40sp"

        app:layout_constraintTop_toBottomOf="@+id/loginascustl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/email"/>

            <EditText
                android:id="@+id/loginascustemail"
                android:layout_width="200sp"
                android:paddingTop="30sp"
                android:layout_height="wrap_content"
                android:hint="@string/enter_your_email"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:paddingTop="20sp"
                android:text="@string/password"/>

            <EditText
                android:id="@+id/loginascustpassword"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:paddingTop="30sp"
                android:hint="@string/enter_your_password"/>


    </LinearLayout>


    <TextView
        android:id="@+id/loginascustforgetpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/Dark_Blue"
        android:textSize="15sp"
        android:paddingTop="20sp"
        android:layout_marginRight="30sp"
        android:text="@string/forget_password"

        app:layout_constraintTop_toBottomOf="@+id/loginascustl2"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginBottom="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/loginascustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:backgroundTint="@color/black"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

        <Button
            android:id="@+id/registarascustomer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registar"
            android:backgroundTint="@color/black"
            android:textColor="@color/white" />

        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"/>

    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>