<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="10sp"
    tools:context=".updatecard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/pay_in_your_card"/>


    <ImageView
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_margin="10sp"
        android:src="@drawable/logo"
        android:background="@color/colorPrimary"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/card_aspected"/>

    <ImageView
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:layout_margin="10sp"
        android:src="@drawable/card" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/card_holder_name"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:hint="@string/card_holder_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/card_number"/>

    <EditText
        android:id="@+id/number"
        android:layout_width="250sp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"/>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/exp_year"/>

            <EditText
                android:id="@+id/exp"
                android:inputType="date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/card_number"/>

        </LinearLayout>



    <Button
        android:id="@+id/add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:backgroundTint="@color/colorPrimary"/>


</LinearLayout>
