<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".UpdateProfile">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@+id/registarasseller"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/registarasasellerfname"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/first_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/registarasasellerlname"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/last_name"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/registarasasellerno"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/mobile_number"
            android:inputType="number"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/address"
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/address"
            android:textColor="@color/black"
            android:textColorHint="@color/black" />


    </LinearLayout>


    <Button
        android:id="@+id/registarasseller"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"

        android:layout_marginBottom="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>